int/shinobi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: shinobi
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: shinobi
