int/shinobi/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ui
  namespace: shinobi
spec:
  rules:
  - host: nvr.home.seanho.com
    http:
      paths:
      - backend:
          service:
            name: shinobi
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - secretName: shinobi-tls
    hosts:
    - nvr.home.seanho.com
